--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ repoze.lru
 scrypt
 pbkdf2
 py_ecc
-rlp>=0.4.7
+rlp==0.4.7
 https://github.com/ethereum/ethash/tarball/master
 pycryptodome>=3.4.7
 coincurve>=5.0.1
